[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"



[dependencies]
actix-web = { version = "4.5.1", default-features = false }
anyhow = "1.0.79"
convert_case = "0.6.0"
csv = "1.3.0"
deserr = { version = "0.6.1", features = ["actix-web"] }
either = { version = "1.9.0", features = ["serde"] }
enum-iterator = "1.5.0"
file-store = { path = "../index-scheduler/file-store" }
flate2 = "1.0.28"
fst = "0.4.7"
memmap2 = "0.7.1"
search_engine = { path = "../search_engine" }
roaring = { version = "0.10.2", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
serde-cs = "0.2.4"
serde_json = "1.0.111"
tar = "0.4.40"
tempfile = "3.9.0"
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde-well-known", "formatting", "parsing", "macros"] }
tokio = "1.35"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
openraft = "0.9.11"

[dev-dependencies]
insta = "1.34.0"
#meili-snap = { path = "../meili-snap" }


